# tronko

./: .dockerignore  .gitignore  .gitmodules  ABLATION.md  CLAUDE.md  Dockerfile  Dockerfile.build-db  EXPERIMENTS_LOG.md  PERFORMANCE.md  README.md  WORK_LOG.md  ablate-tronko-db.sh  ac-3builds.sh  ac-6builds.sh  build-marker.sh  build-tronko-db.sh  docker-compose.yml  monitor_pasta.sh  pasta-3builds.sh  pasta-setup.sh  pyproject.toml  rebuild-all-vert12s.sh  rebuild-all.sh  rebuild_norepartition.sh  rebuild_unfiltered.sh  run_overnight.sh  run_tests.sh  sweep_corrected_sp.sh  sweep_pasta_builds.py  sweep_pasta_config.json  sweep_pasta_decomp.sh  sweep_tronko_build.py  sweep_unfiltered_default.sh  sweep_unfiltered_fewer_bins.sh  sweep_unfiltered_more_bins.sh  sweep_unfiltered_single.sh  test_with_example_data.sh
.dvc/: config
ancestralclust/: Makefile  ancestralclust.c  ancestralclust_orig.c  benchmark.sh  global.h  options.c  test_consistency.sh
databases/: .gitignore  12sv5_unfiltered.dvc  BUILD_INSTRUCTIONS.md  README.md  charadriiformes_single_tree.dvc  metadata.json  sweep_ac_default_sp_0.05.dvc  sweep_ac_default_sp_0.10.dvc  sweep_ac_default_sp_0.20.dvc  sweep_ac_fewer_bins_sp_0.05.dvc  sweep_ac_fewer_bins_sp_0.10.dvc  sweep_ac_fewer_bins_sp_0.20.dvc  sweep_ac_more_bins_sp_0.05.dvc  sweep_ac_more_bins_sp_0.10.dvc  sweep_ac_more_bins_sp_0.20.dvc  sweep_ac_single_sp_0.05.dvc  (+6 more)
tests/: CMakeLists.txt  CORRECTNESS_VERIFICATION.md  Makefile  Makefile.simple  README.md  benchmark_optimization.sh  test_crash_debug_simple  test_golden_outputs.sh  test_runner.c  test_simple_workflows  test_tronko_build_golden.sh  verify_no_logic_change.sh
tests/golden_outputs/: benchmark_10k_singleend_nw.txt  benchmark_10k_singleend_wfa.txt  benchmark_reads_10000.fasta  single_tree_pairedend_nw.txt  single_tree_pairedend_wfa.txt  single_tree_singleend_nw.txt  single_tree_singleend_wfa.txt
tests/integration/: test_simple_workflows.c  test_workflows.c
tests/unit/: test_crash_debug.c  test_crash_debug_simple.c  test_readreference.c
(+412 files in other folders)
